--- a/audio.html
+++ b/audio.html
@@ -1,6 +1,6 @@
 <html>
     <head><title> Listen To Ma' Radio</title></head>
     <body>
-    <audio controls="controls" src="http://s23.myradiostream.com:19564/listen.pls;&type=pls"></audio>
+    <audio controls="controls" src="http://s23.myradiostream.com:19564/;listen.pls;&type=mp3"></audio>
     </body>
 </html>
