--- a/audio.html
+++ b/audio.html
@@ -1,5 +1,7 @@
 <html>
-    <head><title> Listen To Ma' Radio</title></head>
+    <head><title> Listen To Ma' Radio</title>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    </head>
     <body>
     <audio controls="controls" src="http://s23.myradiostream.com:19564/;&type=mp3"></audio>
     </body>
