--- a/audio.html
+++ b/audio.html
@@ -3,6 +3,6 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     </head>
     <body>
-    <audio controls="controls" src="https://s23.myradiostream.com/19564/listen.mp3;&type=mp3"></audio>
+    <script src="//myradiostream.com/embed/adrianforrester"></script>
     </body>
 </html>
